fixed spacing issue

--- a/css/contact.css
+++ b/css/contact.css
@@ -327,7 +327,7 @@
       }
       
       .wrap{
-          width: 90%;
+          width: 85%;
       }
       .wrap p{
         margin: 0;
